@@ -708,7 +708,17 @@ SEXP attribute_hidden do_seq_along(SEXP call, SEXP op, SEXP args, SEXP rho)
     int i, len, *p;
 
     checkArity(op, args);
+#ifdef R_291_and_less
     len = length(CAR(args));
+#else
+    if (isObject(CAR(args)) && DispatchOrEval(call, op, "length", args, rho, &ans, 0, 1))
+    {
+        len = asInteger(ans);
+    }
+    else
+        len = length(CAR(args));
+#endif
+
     ans = allocVector(INTSXP, len);
     p = INTEGER(ans);
     for (i = 0; i < len; i++)
